--- a/Movies/app/src/main/res/layout/fragment_main.xml
+++ b/Movies/app/src/main/res/layout/fragment_main.xml
@@ -8,10 +8,11 @@
         android:id="@+id/gridview_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2"
+        android:columnWidth="135dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
         android:verticalSpacing="0dp"
         android:horizontalSpacing="0dp"
-        android:stretchMode="columnWidth"
         android:scrollbarStyle="outsideOverlay"
         android:verticalScrollbarPosition="right"
         android:scrollbars="vertical"
