--- a/Movies/app/src/main/res/menu/menu_detail.xml
+++ b/Movies/app/src/main/res/menu/menu_detail.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.ishaihachlili.nano.movies.DetailActivity">
+    tools:context="com.ishaihachlili.nano.movies.MovieDetailsActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
