--- a/Movies/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/Movies/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,7 +13,7 @@ This layout is a two-pane layout for the Items master/detail flow.
 
 <fragment
     android:id="@+id/fragment_movies"
-    android:name="com.ishaihachlili.nano.movies.MainActivityFragment"
+    android:name="com.ishaihachlili.nano.movies.MovieListFragment"
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_weight="2"
